compiler/tests/fail/subarrays/x86-64/toto2.jazz
export fn main () -> reg u32 {
  reg u32 res tmp;
  stack u32[4] s;
  reg ptr u32[4] r;
  reg ptr u32[2] r2;

  s[0] = 0;
  r2 = s[2:2];
  r2[0] = 0;
  tmp = r2[0];
  r2 = s[2:2];
  res = r2[0];
  res += tmp;

  return res;
}
